--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ title: Elisabeth Miles | Pilotlight Design
 	</div>
 	<div class="span7">
 		<h1>I design web products and applications. I am based in San Francisco and I believe every pixel counts. </h1>
-		<p>My online portfolio is currently undergoing a redesign.  I have worked with companies that range in size from the smallest startup to global industry leaders, below are some samples of my work. </p>
+		<p>While my online portfolio is getting a make-over, below are a few samples of my work. </p>
 		<div id="myCarousel" class="carousel slide" style="margin-top: 40px; border: 1px solid #ccc; box-shadow: 0px 0px 2px #999">
 		  <!-- Carousel items -->
 		  <div class="carousel-inner">
