--- a/index.html
+++ b/index.html
@@ -3,35 +3,45 @@ layout: default
 title: Elisabeth Miles | Pilotlight Design
 ---
 
-<div id="home" class="jumbotron">
-	<div class="span1">
-		<div style="margin-top: 14px">
-			<img class="thumbnail" src="img/portrait.png">
+<div class="row">
+	<div id="home" class="jumbotron">
+		<div class="span1">
+			<div style="margin-top: 14px">
+				<img class="thumbnail" src="img/portrait.png">
+			</div>
 		</div>
+		<div class="span8">
+			<h1>I design web products and applications. I am based in San Francisco and I believe every pixel counts. </h1>
+			<p>While my online portfolio is getting a make-over, below are a few samples of my work. </p>
+			<div id="myCarousel" class="carousel slide" style="margin-top: 40px; border: 1px solid #ccc; box-shadow: 0px 0px 2px #999">
+			  <!-- Carousel items -->
+			  <div class="carousel-inner">
+			    <div class="active item"><img src="portfolio/mobile-outright-pnl.png"></div>
+			    <div class="item"><img src="portfolio/google-fiber-cities.png"></div>
+			    <div class="item"><img src="portfolio/upstart-homepage.png"></div>
+			    <div class="item"><img src="portfolio/paypal-mobile-shoot.png"></div>
+			    <div class="item"><img src="portfolio/paypal-mobile-print-collateral.png"></div>
+		
+			    <div class="item"><img src="portfolio/wkhd-homepage.png"></div>
+			    <div class="item"><img src="portfolio/cake-interface.png"></div>
+		
+			  </div>
+			  <!-- Carousel nav -->
+			  <a class="carousel-control left" href="#myCarousel" data-slide="prev">&lsaquo;</a>
+			  <a class="carousel-control right" href="#myCarousel" data-slide="next">&rsaquo;</a>
+			</div>
+		</div>	
 	</div>
-	<div class="span8">
-		<h1>I design web products and applications. I am based in San Francisco and I believe every pixel counts. </h1>
-		<p>While my online portfolio is getting a make-over, below are a few samples of my work. </p>
-		<div id="myCarousel" class="carousel slide" style="margin-top: 40px; border: 1px solid #ccc; box-shadow: 0px 0px 2px #999">
-		  <!-- Carousel items -->
-		  <div class="carousel-inner">
-		    <div class="active item"><img src="portfolio/mobile-outright-pnl.png"></div>
-		    <div class="item"><img src="portfolio/google-fiber-cities.png"></div>
-		    <div class="item"><img src="portfolio/upstart-homepage.png"></div>
-		    <div class="item"><img src="portfolio/paypal-mobile-shoot.png"></div>
-		    <div class="item"><img src="portfolio/paypal-mobile-print-collateral.png"></div>
-		
-		    <div class="item"><img src="portfolio/wkhd-homepage.png"></div>
-		    <div class="item"><img src="portfolio/cake-interface.png"></div>
-		
-		  </div>
-		  <!-- Carousel nav -->
-		  <a class="carousel-control left" href="#myCarousel" data-slide="prev">&lsaquo;</a>
-		  <a class="carousel-control right" href="#myCarousel" data-slide="next">&rsaquo;</a>
-		</div>
-	</div>	
 </div>
 <div class="row">
-
+	<div class="span1">&nbsp;</div>
+	<div class="span8">
+	  <ul class="posts unstyled">
+	    {% for post in site.posts %}
+	    <li><a href="{{ post.url }}">{{ post.title }}</a></li>
+	    {% endfor %}
+	  </ul>
+	</div>
 </div>
+
 
