--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ title: Elisabeth Miles | Pilotlight Design
 		</div>
 		<div class="span8">
 			<h1>I design web products and applications. I am based in San Francisco and enjoy making every pixel count. </h1>
-			<p>I do a lot more than make pretty pictures, here are a few to look at while my portfolio is getting a make-over. </p>
+			<p>I do a lot more than make pretty pictures but here are a few to look at while my portfolio is getting a make-over. </p>
 			<div id="myCarousel" class="carousel slide" style="margin-top: 40px; border: 1px solid #ccc; box-shadow: 0px 0px 2px #999">
 			  <!-- Carousel items -->
 			  <div class="carousel-inner">
