--- a/index.html
+++ b/index.html
@@ -11,23 +11,10 @@ title: Elisabeth Miles | Pilotlight Design
 			</div>
 		</div>
 		<div class="span8">
-			<h1>I design web products and applications. I am based in San Francisco and enjoy making every pixel count. </h1>
-				<h5>Gallery</h5>
-				<!-- <ul>
-					<li>Google</li>
-					<li>PayPal/eBay</li>
-					<li>McAfee</li>
-					<li>Walmart</li>
-					<li>Upstart</li>
-				</ul> -->
-				<h5>Case Studies</h5>
-				<!-- <ul>
-					<li>Kiwi Crate</li>
-					<li>Outright</li>
-					<li>Cake Finacial</li>
+			<h1>Hi. I am a UX designer based in San Francisco.  I love prototyping, talking to customers, looking at data, working with smart folks, and making quality products.  </h1>
 
-				</ul> -->
 			<p>I do a lot more than make pretty pictures but here are a few samples to look at while my portfolio is getting a make-over. </p>
+
 			<div id="myCarousel" class="carousel slide" style="margin-top: 40px; border: 1px solid #ccc; box-shadow: 0px 0px 2px #999">
 
 			  <div class="carousel-inner">
@@ -45,7 +32,12 @@ title: Elisabeth Miles | Pilotlight Design
 			  <a class="carousel-control left" href="#myCarousel" data-slide="prev">&lsaquo;</a>
 			  <a class="carousel-control right" href="#myCarousel" data-slide="next">&rsaquo;</a>
 			</div>
-		</div>	
+			 <ul class="posts unstyled">
+			    {% for post in site.posts %}
+			    <li><a href="{{ post.url }}">{{ post.title }}</a></li>
+			    {% endfor %}
+			  </ul>
+		</div>
 	</div>
 </div>
 
