adding header to case studies list

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@ title: Elisabeth Miles | Pilotlight Design
 			  <a class="carousel-control left" href="#myCarousel" data-slide="prev">&lsaquo;</a>
 			  <a class="carousel-control right" href="#myCarousel" data-slide="next">&rsaquo;</a>
 			</div>
+			<h3>Case studies</h3>
 			 <ul class="posts unstyled">
 			    {% for post in site.posts %}
 			    <li><a href="{{ post.url }}">{{ post.title }}</a></li>
