minor content change

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ title: Elisabeth Miles | Pilotlight Design
 			</div>
 		</div>
 		<div class="span8">
-			<h1>Hi. I am a UX designer based in San Francisco.  I love prototyping, talking to customers, looking at data, working with smart folks, and making quality products.  </h1>
+			<h1>Hi. I am a UX designer based in San Francisco.  I love prototyping, talking to customers, looking at data, and making quality products.  </h1>
 
 			<p>I do a lot more than make pretty pictures but here are a few samples to look at while my portfolio is getting a make-over. </p>
 
