--- a/index.html
+++ b/index.html
@@ -32,12 +32,39 @@ title: Elisabeth Miles | Pilotlight Design
 			  <a class="carousel-control left" href="#myCarousel" data-slide="prev">&lsaquo;</a>
 			  <a class="carousel-control right" href="#myCarousel" data-slide="next">&rsaquo;</a>
 			</div>
-			<h3>Case studies</h3>
-			 <ul class="posts unstyled">
-			    {% for post in site.posts %}
-			    <li><a href="{{ post.url }}">{{ post.title }}</a></li>
-			    {% endfor %}
-			  </ul>
+			<div class="span3">
+				<h3>Case studies</h3>
+				 <ul class="posts unstyled">
+				    {% for post in site.posts %}
+				    <li><a href="{{ post.url }}">{{ post.title }}</a></li>
+				    {% endfor %}
+				  </ul>
+			</div>
+			<div class="span4">
+				<h3>Companies</h3>
+				<div class="row">
+					<div class="span1">
+					 <ul class="posts unstyled">
+						<li><a href="https://www.billfloat.com/" target="blank">BillFloat</li>
+						<li><a href="https://fiber.google.com/about/" target="blank">Google Fiber</li>
+						<li><a href="http://www.kiwicrate.com/diy-materials.html" target="blank">KiwiCrate</li>		
+						<li><a href="http://www.mcafee.com/us/" target="blank">McAfee</li>									
+						<li><a href="http://outright.com/" target="blank">Outright</li>
+						<li><a href="http://www.paypal.com" target="blank">PayPal</li>
+					</ul>
+					</div>
+					<div class="span2">
+						<ul class="posts unstyled">
+							<li><a href="http://www.sofi.com" target="blank">Sofi</li>						
+							<li><a href="http://www.taskrabbit.com/become-a-taskrabbit" target="blank">TaskRabbit</li>						
+							<li><a href="https://www.upstart.com/" target="blank">Upstart</li>
+							<li><a href="https://www.walmart.com/" target="blank">Walmart.com</li>	
+							<li><a href="https://www.xoom.com/" target="blank">Xoom.com</li>					
+							<li><a href="https://zephyrhealthinc.com/" target="blank">Zephyr Health Inc</li>
+						</div>
+					</div>
+				</div>
+			</div>
 		</div>
 	</div>
 </div>
