new homepage modifications

--- a/index.html
+++ b/index.html
@@ -12,62 +12,68 @@ title: Elisabeth Miles | Pilotlight Design
 		</div>
 		<div class="span8">
 			<h1>Hi. I am a UX designer based in San Francisco.  I love prototyping, talking to customers, looking at data, and making quality products.  </h1>
-
-			<p>I do a lot more than make pretty pictures but here are a few samples to look at while my portfolio is getting a make-over. </p>
-
-			<div id="myCarousel" class="carousel slide" style="margin-top: 40px; border: 1px solid #ccc; box-shadow: 0px 0px 2px #999">
-
-			  <div class="carousel-inner">
-			    <div class="active item"><img src="portfolio/mobile-outright-pnl.png"></div>
-			    <div class="item"><img src="portfolio/google-fiber-cities.png"></div>
-			    <div class="item"><img src="portfolio/upstart-homepage.png"></div>
-			    <div class="item"><img src="portfolio/paypal-mobile-shoot.png"></div>
-			    <div class="item"><img src="portfolio/paypal-mobile-print-collateral.png"></div>
-		
-			    <div class="item"><img src="portfolio/wkhd-homepage.png"></div>
-			    <div class="item"><img src="portfolio/cake-interface.png"></div>
-		
-			  </div>
-
-			  <a class="carousel-control left" href="#myCarousel" data-slide="prev">&lsaquo;</a>
-			  <a class="carousel-control right" href="#myCarousel" data-slide="next">&rsaquo;</a>
-			</div>
-			<div class="span3">
-				<h3>Case studies</h3>
-				 <ul class="posts unstyled">
-				    {% for post in site.posts %}
-				    <li><a href="{{ post.url }}">{{ post.title }}</a></li>
-				    {% endfor %}
-				  </ul>
-			</div>
-			<div class="span4">
-				<h3>Companies</h3>
-				<div class="row">
-					<div class="span1">
-					 <ul class="posts unstyled">
-						<li><a href="https://www.billfloat.com/" target="blank">BillFloat</li>
+      
+    </div>
+  </div>  
+</div>
+	<div class="row">	
+	  <div class="span1">&nbsp;</div>
+		<div class="span4">
+			<h4>Case studies</h4>
+  		<ul class="posts unstyled">
+  			{% for post in site.posts %}
+  			<li><a href="{{ post.url }}">{{ post.title }}</a></li>
+  			{% endfor %}
+  		</ul>
+		</div>
+		<div class="span4">
+			<h4>Companies</h4>
+			<div class="row-fluid">
+				<div class="span4">
+					<ul class="posts unstyled">
+					  <li><a href="https://www.billfloat.com/" target="blank">BillFloat</li>
 						<li><a href="https://fiber.google.com/about/" target="blank">Google Fiber</li>
 						<li><a href="http://www.kiwicrate.com/diy-materials.html" target="blank">KiwiCrate</li>		
 						<li><a href="http://www.mcafee.com/us/" target="blank">McAfee</li>									
 						<li><a href="http://outright.com/" target="blank">Outright</li>
 						<li><a href="http://www.paypal.com" target="blank">PayPal</li>
 					</ul>
-					</div>
-					<div class="span2">
-						<ul class="posts unstyled">
-							<li><a href="http://www.sofi.com" target="blank">Sofi</li>						
-							<li><a href="http://www.taskrabbit.com/become-a-taskrabbit" target="blank">TaskRabbit</li>						
-							<li><a href="https://www.upstart.com/" target="blank">Upstart</li>
-							<li><a href="https://www.walmart.com/" target="blank">Walmart.com</li>	
-							<li><a href="https://www.xoom.com/" target="blank">Xoom.com</li>					
-							<li><a href="https://zephyrhealthinc.com/" target="blank">Zephyr Health Inc</li>
-						</div>
-					</div>
+				</div>
+				<div class="span2">
+					<ul class="posts unstyled">
+  					<li><a href="http://www.sofi.com" target="blank">Sofi</li>						
+  					<li><a href="http://www.taskrabbit.com/become-a-taskrabbit" target="blank">TaskRabbit</li>						
+  					<li><a href="https://www.upstart.com/" target="blank">Upstart</li>
+  					<li><a href="https://www.walmart.com/" target="blank">Walmart.com</li>	
+  					<li><a href="https://www.xoom.com/" target="blank">Xoom.com</li>					
+  					<li><a href="https://zephyrhealthinc.com/" target="blank">Zephyr Health Inc</li>
+  				</ul>
 				</div>
 			</div>
 		</div>
 	</div>
+	<div class="row">
+    <div id="myCarousel" class="carousel slide" style="margin-top: 40px; border: 1px solid #ccc;">
+
+  	  <div class="carousel-inner">
+  	    <div class="active item"><img src="portfolio/mobile-outright-pnl.png"></div>
+  	    <div class="item"><img src="portfolio/google-fiber-cities.png"></div>
+  	    <div class="item"><img src="portfolio/upstart-homepage.png"></div>
+  	    <div class="item"><img src="portfolio/paypal-mobile-shoot.png"></div>
+  	    <div class="item"><img src="portfolio/paypal-mobile-print-collateral.png"></div>
+
+  	    <div class="item"><img src="portfolio/wkhd-homepage.png"></div>
+  	    <div class="item"><img src="portfolio/cake-interface.png"></div>
+
+  	  </div>
+
+  	  <a class="carousel-control left" href="#myCarousel" data-slide="prev">&lsaquo;</a>
+  	  <a class="carousel-control right" href="#myCarousel" data-slide="next">&rsaquo;</a>
+  	</div>
+  </div>
+  
 </div>
+
 
 
 
