removed border from carousel

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ title: Elisabeth Miles | Pilotlight Design
 		</div>
 	</div>
 	<div class="row">
-    <div id="myCarousel" class="carousel slide" style="margin-top: 40px; border: 1px solid #ccc;">
+    <div id="myCarousel" class="carousel slide" style="margin-top: 40px;">
 
   	  <div class="carousel-inner">
   	    <div class="active item"><img src="portfolio/mobile-outright-pnl.png"></div>
